# fluidglass

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  hyprpm.toml
src/: main.cpp
